--- a/style.css
+++ b/style.css
@@ -208,21 +208,67 @@ i {
   text-align: center;
 }
 
-.about-info {
+main.infotable {
+  width: 85%;
+  height: 35rem;
+  background-color: #0f0f0f;
+  backdrop-filter: blur(7px);
+  box-shadow: 0 0.4rem 0.8rem #0005;
+  border-radius: .8rem;
   overflow: hidden;
-  font-family: monospace;
-  font-size: 76px; 
-  text-align: center;
-  cursor: default;
+  margin-top: 40px;
+  animation: fade-in 1s ease-in-out forwards;
+  opacity: 0;
 }
 
-.about-info2 {
-  overflow: hidden;
-  font-family: monospace;
-  font-size: 76px; 
-  text-align: center;
-  cursor: default;
+.infotable__body {  
+  width: 98%;
+  height:76%;
+  background-color: #171717;
+  font-size: 18px;
+  margin: 1.05rem auto;
+  border-radius: .6rem;
+}
+
+.infotable__header {
+  width: 100%;
+  height: 5.2rem;
+  background-color: #171717;
+  padding: .5rem 0rem;
   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.infotable__header > h1 {
+  font-size: 36px;
+}
+
+.infotable__header > h1 > i {
+  font-size: 36px;
+  font-weight: bold;
+  margin-right: 17px;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
 }
 
 
