--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ i {
 }
 
 main.infotable {
-  width: 85%;
+  width: 82vw;
   height: 35rem;
   background-color: #0f0f0f;
   backdrop-filter: blur(7px);
@@ -225,7 +225,7 @@ main.infotable {
   width: 98%;
   height:76%;
   background-color: #171717;
-  font-size: 18px;
+  font-size: 20px;
   margin: 1.05rem auto;
   border-radius: .6rem;
 }
@@ -241,7 +241,7 @@ main.infotable {
 }
 
 .infotable__header > h1 {
-  font-size: 36px;
+  font-size: 38px;
 }
 
 .infotable__header > h1 > i {
@@ -346,7 +346,7 @@ main.table2 {
 
 main.table3 {
   width: 82vw;
-  height: 16.5rem;
+  height: 16.6rem;
   background-color: #0f0f0f;
   backdrop-filter: blur(7px);
   box-shadow: 0 0.4rem 0.8rem #0005;
