--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 * {
   margin: 0;
   padding: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 body {
@@ -20,22 +22,12 @@ body {
   overflow: -moz-hidden-unscrollable;
 }
 
+
 *::-webkit-scrollbar {
-  width: 2px;
+  display: none;
 }
 
-*::-webkit-scrollbar-track {
-  background: #171717;
-}
 
-*::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 2px;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
 
 /* --------- profile -----------*/
 
@@ -62,8 +54,8 @@ body {
 }
 
 .profile-img {
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   display: inline-block;
 }
 
@@ -71,12 +63,12 @@ body {
 
 #accordian {
   background: #171717;
-  width: 250px;
+  width: 210px;
   padding: 10px;
   float: left;
   height: 100vh;
   overflow-x: hidden;
-  position: relative;
+  position: fixed;
   padding-right: 0px;
   z-index: 1000;
   top: 0;
@@ -94,8 +86,8 @@ body {
 #accordian ul li a {
   color: #ffffff80;
   text-decoration: none;
-  font-size: 18px;
-  line-height: 90px;
+  font-size: 15px;
+  line-height: 80px;
   text-align: center;
   display: block;
   padding: 0px 20px;
@@ -179,16 +171,14 @@ body {
   left: -25px;
 }
 
-i {
+a > i {
   margin-right: 10px;
 }
-
-
 
 /* --------- main-content -----------*/
 
 .main-content {
-  margin-left: 250px;
+  margin-left: 222px;
   height: 100vh;
   margin-top: 0;
   color: #fff;
@@ -206,71 +196,8 @@ i {
   place-items: center;
   justify-content: center;
   text-align: center;
-}
-
-main.infotable {
-  width: 82vw;
-  height: 35rem;
-  background-color: #0f0f0f;
-  backdrop-filter: blur(7px);
-  box-shadow: 0 0.4rem 0.8rem #0005;
-  border-radius: .8rem;
   overflow: hidden;
-  margin-top: 40px;
-  animation: fade-in 1s ease-in-out forwards;
-  opacity: 0;
 }
-
-.infotable__body {  
-  width: 98%;
-  height:76%;
-  background-color: #171717;
-  font-size: 20px;
-  margin: 1.05rem auto;
-  border-radius: .6rem;
-}
-
-.infotable__header {
-  width: 100%;
-  height: 5.2rem;
-  background-color: #171717;
-  padding: .5rem 0rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.infotable__header > h1 {
-  font-size: 38px;
-}
-
-.infotable__header > h1 > i {
-  font-size: 36px;
-  font-weight: bold;
-  margin-right: 17px;
-}
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes typing {
-  from {
-    width: 0;
-  }
-}
-
-@keyframes blink {
-  50% {
-    border-color: transparent;
-  }
-}
-
 
 /* -------------------- topics ----------------------*/
 
@@ -284,22 +211,22 @@ main.infotable {
 
 main.table {
   width: 82vw;
-  height: 19.4rem;
+  height: 18.25rem;
   background-color: #0f0f0f;
   backdrop-filter: blur(7px);
   box-shadow: 0 0.4rem 0.8rem #0005;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   overflow: overlay;
-  margin-top: 40px;
+  margin-top: 28.8px;
 }
 
 .table__body {  
-  width: 98%;
-  height:66%;
+  width: 97.71%;
+  height: 64.3%;
   background-color: #171717;
-  font-size: 18px;
+  font-size: 15px;
   margin: 1.05rem auto;
-  border-radius: .6rem;
+  border-radius: .6rem;align-self: auto;
 }
 
 .table__header {
@@ -314,7 +241,7 @@ main.table {
 
 main.table2 {
   width: 82vw;
-  height: 17.46rem;
+  height: 16.8rem;
   background-color: #0f0f0f;
   backdrop-filter: blur(7px);
   box-shadow: 0 0.4rem 0.8rem #0005;
@@ -324,10 +251,10 @@ main.table2 {
 }
 
 #table__body2{
-  width: 98%;
-  height:59.5%;
+  width: 97.71%;
+  height:58.3%;
   background-color: #171717;
-  font-size: 18px;
+  font-size: 15px;
   margin: 1.05rem auto;
   border-radius: .6rem;
   overflow: auto;
@@ -369,7 +296,7 @@ main.table3 {
   width: 98%;
   height:61%;
   background-color: #171717;
-  font-size: 18px;
+  font-size: 15px;
   margin: 1.05rem auto;
   border-radius: .6rem;
   overflow: auto;
@@ -401,7 +328,7 @@ main.table4 {
   width: 98%;
   height:66%;
   background-color: #171717;
-  font-size: 18px;
+  font-size: 15px;
   margin: 1.05rem auto;
   border-radius: .6rem;
   overflow: auto;
@@ -412,7 +339,7 @@ main.table4 {
 .table__header h1 {
   margin: 0;
   padding: 0;
-  font-size: 25px;
+  font-size: 22px;
   text-align: center;
   cursor: default;
 }
@@ -442,8 +369,7 @@ main.table4 {
 }
 
 h1 > i {
-  margin-right: 15px;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 tr > th > i {
@@ -623,141 +549,67 @@ thead > tr > th {
   height: 100vh;
 }
 
-main.runcode-table {
-  width: 82vw;
-  height: 92vh;
-  background-color: #0f0f0f;
-  backdrop-filter: blur(7px);
-  box-shadow: 0 0.4rem 0.8rem #0005;
-  border-radius: .8rem;
-  overflow: hidden;
-}
-
-.runcode__header {
-  width: 100%;
-  height: 10%;
-  background-color: #171717;
-  padding: .5rem 0rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.runcode__header h1 {
-  margin: 0;
-  padding: 0;
-  font-size: 38px;
-  text-align: center;
-  cursor: default;
-}
-
-.runcode__body {
-  width: 98%;
-  height: 84.6%;
-  background-color: #171717;
-  font-size: 18px;
-  margin: 1.05rem auto;
-  border-radius: .6rem;
-  overflow: auto;
-  overflow: overlay;
-}
-
-.runcode-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.runcode__body::-webkit-scrollbar {
-  width: 3px;
-  height: 0.2rem;
-}
-
-.runcode__body::-webkit-scrollbar-thumb {
-  border-radius: .5rem;
-  background-color: #959595;
-  visibility: hidden;
-}
-
-.runcode__body:hover::-webkit-scrollbar-thumb {
-  visibility: visible;
-}
-
 .site-java {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  width: 98%;
+  width: 82vw;
   height: 96.1%;
   margin: 0 auto;
-  border-radius: 0.8rem;
-  padding-top: 15.3px;
+  margin-top: 28.8px;
+  margin-bottom: 28.8px;
 }
 
 #javaFrame {
   width: 100%;
   height: 100%;
-  border-radius: 0.8rem;
+  border-radius: 0.9rem;
 }
 
-/* -------------------- survey ----------------------*/
-
-.generator-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center; /* Center the tables vertically */
-  font-size: 1rem;
-  height: 100vh;
-}
+/* -------------------- credits ----------------------*/
 
 main.tableg, main.tableg2 {
-  width: 30vw;
-  height: 17.7rem;
+  width: 40vw;
+  height: 14.35rem;
   background-color: #0f0f0f;
   backdrop-filter: blur(7px);
   box-shadow: 0 0.4rem 0.8rem #0005;
-  border-radius: .8rem;
-  overflow: hidden;
-  margin: 0 20px; /* Add margin between the tables */
+  border-radius: 0.8rem;
+  overflow: overlay;
+  margin-top: 28.8px;
 }
 
 #table__bodyg {
-  width: 95%;
-  height: 57.8%;
+  width: 94.4%;
+  height: 54.3%;
   background-color: #171717;
-  font-size: 18px;
+  font-size: 15px;
   margin: 1.05rem auto;
-  border-radius: .6rem;
-  overflow: auto;
-  overflow: overlay;
+  border-radius: .6rem;align-self: auto;
 }
 
 
 .table__headerg {
-    width: 100%;
-    height: 4.5rem;
-    background-color: #171717;
-    padding: .5rem 0rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 3.5rem;
+  background-color: #171717;
+  padding: .5rem 0rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   }
 
 .table__headerg h1 {
-  font-size: 30px;
+  font-size: 22px;
 }
 
 #note {
-  font-size: 27px;
+  font-size: 15px;
 }
 
 #notedescription {
-  font-size: 20px;
+  font-size: 15px;
 }
-
-
-
-/* -------------------- credits ----------------------*/
 
 .credits-wrapper {
   display: flex;
